# address-sanitization-service

./: .gitignore  Dockerfile  Dockerfile_databricks  README.md  credentials.env.sample  docker-compose.yml  pyproject.toml  test.md
.devcontainer/: Dockerfile  devcontainer.json  gitconfig-base  on-create.bash
.github/workflows/: publish-docker.yml
app/: exceptions.py  main.py  result_helper.py  schemas.py  singleton_logger.py  utilities.py
app/parsers_and_expanders/: address_entity_batch_schema.json  address_entity_schema.json  address_expansion_batch_schema.json  address_expansion_schema.json  libpostal.py  llm.py
app/strategies/: __init__.py  azure.py  azure_geocode.py  azure_search.py  google_geocode.py  loqate.py  mapbox.py  osm_nominatim.py
app/tests/strategies/: azure_geocode_tests.py  llm_address_utils_tests.py
app/tests/utils/: batch_executor_tests.py  llm_address_utils_tests.py
app/utils/: address_parser.py  address_sanitizer.py  azure_openai_utils.py  batch_executor.py  libpostal.py
app/utils/llm/: azure_openai_utils.py  llm.py  llm_address_utils.py
deploy/: README.md  argocd-initial-objects.yaml
deploy/apps/polaris/: deployment.yaml  externalsecret-polaris.yaml  ingress.yaml  service.yaml
deploy/gitops/: root.yaml
deploy/gitops/appprojects/: appproj-apps.yaml
deploy/gitops/apps/: polaris-application.yaml
deploy/gitops/argocd/: argocd-app.yaml  (+1 more)
eval/: README.md  address_evaluator.py  evaluate_address_data.py
eval/data/: addresses.jsonl  peru.jsonl
test_harness/: run_test.py
test_harness/sample_data/: addresses.csv  peru.csv
(+8 files in other folders)
